--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <h2>Rahmen</h2>
             <ul class="list">
               <li><b>Einsatz:</b> Remote, gelegentlich vor Ort nach Absprache</li>
-              <li><b>Sprachen:</b> Deutsch · Englisch</li>
+              <li><b>Sprachen:</b> Deutsch · Spanisch · Englisch </li>
               <li><b>Kontakt:</b> <span class="mono">leo.stoller@bluewin.ch</span></li>
             </ul>
           </div>
@@ -562,3 +562,4 @@ ${decodeURIComponent(name)}`;
   </script>
 </body>
 </html>
+
